# cbase

./: .gitignore  LICENSE  README.md  solution.code-workspace
.script/: _b
hello/: source_list
hello/.script/: CMakeLists.txt  _b  _build_env
hello/config/: README.md
hello/config/Common/: directories_for_includes  ignore_source_filter  libraries  macros  option
hello/config/Linux_aarch64/: directories_for_includes
hello/config/Linux_aarch64_release/: directories_for_libraries
hello/config/Linux_common/: compile_option  directories_for_includes  libraries
hello/config/Linux_common_debug/: compile_option
hello/config/Linux_x86_64/: directories_for_includes
hello/config/Linux_x86_64_release/: directories_for_libraries
hello/config/Windows_common/: compile_option  directories_for_includes  directories_for_libraries  libraries  option
hello/config/Windows_x86_64_debug/: compile_option  directories_for_libraries  link_option  postwork
hello/config/Windows_x86_64_release/: compile_option  link_option  postwork
hello/src/: main.cc
